--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -20,10 +20,10 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Lisa Wilton</h1>
+							<p class="major">Hi! I'm Lisa and I'm a full stack web developer. To see some examples of my work, click below.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">My Recent Projects</a></li>
 							</ul>
 						</div>
 						<div class="image">
