--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -21,13 +21,13 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Lisa Wilton</h1>
-							<p class="major">Hi! I'm Lisa and I'm a full stack web developer. To see some examples of my work, click below.</p>
+							<p class="major">Hi! I'm Lisa and I'm a full stack web developer from Northern Ireland. To see some examples of my work, click below.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">My Recent Projects</a></li>
 							</ul>
 						</div>
-						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+						<div class="image causeway">
+							<img src="images/causeway.jpeg" alt="Beautiful image of the Giant's Causeway" />
 						</div>
 					</section>
 
