--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -41,7 +41,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/userinterface.png" alt="" />
+							<img src="images/userinterface.png" alt="Screenshot of project webpage" />
 						</div>
 					</section>
 
@@ -55,7 +55,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/milk.png" alt="Image of milk and doughnuts" />
 						</div>
 					</section>
 
