--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -84,25 +84,25 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+										<img src="images/PurrfectM.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Purrfect Match</h3>
+										<p>A simple Bootstrap landing page for a human/feline dating app.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small"><a href="https://ziggyss.github.io/BootstrapLandingPage/">Details</a></span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+										<img src="images/bandwscreen.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Black and White Image Gallery</h3>
+										<p>Another Bootstrap Project.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small"><a href="https://ziggyss.github.io/Photogrid1/">Details</a></span></li>
 										</ul>
 									</div>
 								</article>
