--- a/html5up-story/index.html
+++ b/html5up-story/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Lisa Wilton</h1>
-							<p class="major">Hi! I'm Lisa and I'm a full stack web developer from Northern Ireland. To see some examples of my work, click below.</p>
+							<p class="major">Hi! I'm a full stack web developer from Belfast, Northern Ireland. To see some examples of my work, click below.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">My Recent Projects</a></li>
 							</ul>
@@ -108,27 +108,28 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+										<img src="images/BSImageGallery.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Colour Image Gallery</h3>
+										<p>Another image gallery that uses Bootstrap 3.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small"><a href="https://ziggyss.github.io/BSImageGallery/">Details</a></span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
+										<img src="images/Blog.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Simple Blog Page</h3>
+										<p>A simple blog page layout using CSS.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small"><a href="https://ziggyss.github.io/simpleblogpage/">Details</a></span></li>
 										</ul>
 									</div>
+								
 								</article>
 								<article>
 									<a href="images/gallery/fulls/05.jpg" class="image">
@@ -229,12 +230,14 @@
 							</div>
 
 					</section>
+				
 
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Get In Touch</h2>
+							<p>If you're interested in working with me or just learning more about my work, pop me a message below.</p>
+							<!--
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
@@ -298,12 +301,12 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Contact Form</h2>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
